faster builds on travis by a bit.